# Sanalouhos-Solver

./: README.md  puzzle.txt  pyproject.toml  words-test.txt  words.txt
solver/: fetch_puzzle.py  solver.py
