[tool.poetry]
name = "sanalouhos-solver"
version = "0.1.0"
description = ""
authors = ["jkarenko <juho.karenko@gmail.com>"]
readme = "README.md"
packages = [{include = "solver"}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
matplotlib = "^3.9.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.24.0"
browser-cookie3 = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sanalouhos-solver = "solver.solver:main"
sanalouhos-solver-custom = "solver.solver:main(custom_puzzle=True)"
